update to Java 24